--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit>=1.44
-openai>=1.75
-python-dotenv>=1.1
-requests>=2.32
-beautifulsoup4>=4.12
-googlemaps==4.10.0
+streamlit==1.31.0
+beautifulsoup4==4.12.2
+requests==2.31.0
+pandas==2.1.0
+openai==1.7.0
+openpyxl==3.1.2
+validators==0.22.0
+email-validator==2.1.0
